# biru

./: .gitignore  CONTRIBUTING.md  README.md  constants.vala  format.sh  main.vala  meson.build  service.vala  uncrustify.vala.cfg
.github/workflows/: build.yml  build_mac.yml  macos.yml  ubuntu.yml
core/: internal.vala  meson.build  models.vala  plugin.vala  prefetch.vala
internal/: internal.vala  meson.build  plugin.vala
providers/: meson.build  nhentai.vala  truyentranh.vala
resources/: biru.gresource.xml  style.css
service/: api.vala  configs.vala  constants.vala  meson.build  models.vala  serde.vala  service.vala
test/: meson.build  test.vala
ui/: application.vala  configs.vala  controller.vala  internal.vala  meson.build  stackhist.vala  viewport.vala  window.vala
ui/controllers/: appctl.vala  settingswindowctl.vala
ui/menus/: bookcard.vala  headermenu.vala  pagecard.vala  tagmenu.vala
ui/reader/: configs.vala  headerbar.vala  image.vala  loadingcircle.vala  viewer.vala  viewport.vala
ui/resources/: biru.gresource.xml  style.css
ui/views/: bookdetails.vala  history.vala  homepage.vala  reader.vala  warning.vala
ui/widgets/: bookcard.vala  bookgrid.vala  bookinfo.vala  bookpreview.vala  commonsetting.vala  commonsettingsbox.vala  coveranim.vala  headerbar.vala  homepagesettingbox.vala  homepagesettingsbox.vala  image.vala  labeltop.vala  loading.vala  navigation.vala  pagecard.vala  readersettingsbox.vala  rightbar.vala  tag.vala  taggrid.vala  warning.vala
ui/windows/: about.vala  mainwin.vala  preferences.vala  reader.vala  setting.vala  settingswindow.vala
utils/: clipboard.vala  configs.vala  internet.vala  jsonconf.vala  logger.vala  meson.build  options.vala  string.vala  utils.vala
