sources += files (
    'widgets/headerbar.vala',
    'widgets/bookcard.vala',
    'widgets/bookgrid.vala',
    'widgets/loading.vala',
    'widgets/labeltop.vala',
    'widgets/image.vala',
    'widgets/navigation.vala',
    'widgets/rightbar.vala',
    'widgets/warning.vala',
    
    'views/homepage.vala',
    'views/bookdetails.vala',
    'views/history.vala',
    
    'windows/mainwin.vala',
    'windows/reader.vala',

    'menus/bookcard.vala',

    'configs.vala',
    'internal.vala',
    'controller.vala',
    'application.vala'
)

