sources += files (
    'widgets/headerbar.vala',
    'widgets/bookcard.vala',
    'widgets/bookgrid.vala',
    'widgets/loading.vala',
    'widgets/labeltop.vala',
    'widgets/image.vala',
    'widgets/navigation.vala',
    'widgets/rightbar.vala',
    'widgets/tag.vala',
    'widgets/taggrid.vala',
    'widgets/bookinfo.vala',
    'widgets/pagecard.vala',
    'widgets/bookpreview.vala',
    'widgets/coveranim.vala',
    'widgets/commonsettingsbox.vala',
    'widgets/homepagesettingsbox.vala',
    
    'views/homepage.vala',
    'views/bookdetails.vala',
    'views/history.vala',
    'views/warning.vala',
    
    'windows/mainwin.vala',
    'windows/reader.vala',
    'windows/about.vala',
    'windows/settingswindow.vala',

    'menus/bookcard.vala',
    'menus/headermenu.vala',
    'menus/tagmenu.vala',
    'menus/pagecard.vala',

    'reader/headerbar.vala',
    'reader/loadingcircle.vala',
    'reader/image.vala',
    'reader/viewport.vala',
    'reader/configs.vala',

    'controllers/appctl.vala',

    'configs.vala',
    'viewport.vala',
    'application.vala'
)

